--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@
 
 langchain==0.1.16
 langchain-community==0.0.34
+langchain-openai==0.1.3
 langgraph==0.0.38
-langchain_openai
+langsmith==0.1.48
+openai==1.22.0
 pandas==2.2.2
 PyMuPDF==1.24.3
+streamlit==1.35.0
