--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 
 
-langchain==0.1.16
-langchain-community==0.0.34
-langgraph==0.0.38
-pandas==2.2.2
-PyMuPDF==1.24.3
+langchain
+langchain-community
+langchain-openai
+langgraph
+pandas
+PyMuPDF
